--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,13 @@
 STRIPE_API_KEY=
 
 TELEGRAM_BOT_API_KEY=
+
+SECRET_KEY=
+TELEGRAM_TOKEN=
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_HOST=
+POSTGRES_PORT=
+CELERY_BROKER_URL=
+CELERY_RESULT_BACKEND=
